<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.InfoAutoActivity"
    android:background="@drawable/ic_malla2"
    >

    <EditText
        android:id="@+id/etTipo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="75dp"
        android:backgroundTint="?android:attr/colorActivatedHighlight"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/colorBlanco"
        tools:layout_editor_absoluteX="153dp"
        tools:layout_editor_absoluteY="40dp" />

    <TextView
        android:id="@+id/tvTipo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etTipo2"
        android:layout_alignStart="@+id/tvMarca2"
        android:text="@string/text_tipo"
        android:textSize="25dp"
        android:textColor="@color/colorBlanco"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="56dp" />

    <EditText
        android:id="@+id/etMotor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="129dp"
        android:backgroundTint="?android:attr/colorActivatedHighlight"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/colorBlanco"
        tools:layout_editor_absoluteX="153dp"
        tools:layout_editor_absoluteY="40dp" />

    <TextView
        android:id="@+id/tvMotor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvTipo2"
        android:layout_alignTop="@+id/etMotor2"
        android:text="@string/text_motor"
        android:textColor="@color/colorBlanco"
        android:textSize="25dp"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="56dp" />

    <EditText
        android:id="@+id/etModelo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="201dp"
        android:backgroundTint="?android:attr/colorActivatedHighlight"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/colorBlanco"
        tools:layout_editor_absoluteX="153dp"
        tools:layout_editor_absoluteY="40dp" />

    <TextView
        android:id="@+id/tvModelo2"
        android:layout_width="wrap_content"
        android:textColor="@color/colorBlanco"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etModelo2"
        android:layout_alignStart="@+id/tvTipo2"
        android:text="@string/text_modelo"
        android:textSize="25dp"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="56dp" />

    <TextView
        android:id="@+id/tvMarca2"
        android:layout_width="wrap_content"
        android:textColor="@color/colorBlanco"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etMarca2"
        android:layout_alignStart="@+id/tvPatente4"
        android:text="@string/text_marca"
        android:textSize="25dp"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="56dp" />

    <EditText
        android:id="@+id/etChasis2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="197dp"
        android:backgroundTint="?android:attr/colorActivatedHighlight"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/colorBlanco"
        tools:layout_editor_absoluteX="153dp"
        tools:layout_editor_absoluteY="40dp" />

    <EditText
        android:id="@+id/etMarca2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="119dp"
        android:backgroundTint="?android:attr/colorActivatedHighlight"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/colorBlanco"
        tools:layout_editor_absoluteX="153dp"
        tools:layout_editor_absoluteY="40dp" />

    <TextView
        android:id="@+id/tvPatente4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/etPatente2"
        android:layout_marginStart="46dp"
        android:text="@string/text_patente"
        android:textColor="@color/colorBlanco"
        android:textSize="25dp"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="56dp" />

    <TextView
        android:id="@+id/tvChasis2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etChasis2"
        android:layout_alignEnd="@+id/tvMotor2"
        android:text="@string/text_chasis"
        android:textColor="@color/colorBlanco"
        android:textSize="25dp"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="56dp" />

    <EditText
        android:id="@+id/etPatente2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="46dp"
        android:backgroundTint="?android:attr/colorActivatedHighlight"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/colorBlanco"
        tools:layout_editor_absoluteX="153dp"
        tools:layout_editor_absoluteY="40dp" />

    <Button
        android:id="@+id/btngActualizarDatos"
        android:layout_width="383dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-153dp"
        android:layout_toEndOf="@+id/tvChasis2"
        android:backgroundTint="?android:attr/colorActivatedHighlight"
        android:text="@string/btn_actualizar_info"
        android:textColor="@color/colorBlanco" />
</RelativeLayout>