<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_camionetasuperior"
    tools:context="com.example.nicolas.miauto.Activities.NeumaticosActivity">

    <TextView
        android:id="@+id/tvFecha1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/tvFecha2"
        android:layout_marginStart="36dp"
        android:background="@drawable/textview_design2"
        android:textColor="@color/colorBlanco"
        android:text="@string/text_fecha" />

    <TextView
        android:id="@+id/tvFecha2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/textview_design2"
        android:textColor="@color/colorBlanco"
        android:text="@string/text_fecha" />

    <TextView
        android:id="@+id/tvFecha3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="34dp"
        android:background="@drawable/textview_design2"
        android:textColor="@color/colorBlanco"
        android:text="@string/text_fecha" />

    <TextView
        android:id="@+id/tvPressValuediH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="107dp"
        android:layout_marginTop="116dp"
        android:background="@drawable/textview_design"
        android:gravity="center"
        android:textSize="24sp"
        android:text="@string/number_30" />

    <TextView
        android:id="@+id/tvPressValuetiH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/tvPressValuediH"
        android:layout_marginBottom="116dp"
        android:background="@drawable/textview_design"
        android:gravity="center"
        android:textSize="24sp"
        android:text="@string/number_30" />

    <TextView
        android:id="@+id/tvPressValueddH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/tvPressValuediH"
        android:layout_marginEnd="108dp"
        android:background="@drawable/textview_design"
        android:gravity="center"
        android:textSize="24sp"
        android:text="@string/number_30" />

    <TextView
        android:id="@+id/tvPressValuetdH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvPressValuetiH"
        android:layout_alignEnd="@+id/tvPressValueddH"
        android:background="@drawable/textview_design"
        android:gravity="center"
        android:textSize="24sp"
        android:text="@string/number_30"  />

    <TextView
        android:id="@+id/tvPressValueauH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:background="@drawable/textview_design"
        android:gravity="center"
        android:textSize="24sp"
        android:text="@string/number_30" />

    <ImageButton
        android:id="@+id/btnFecha1"
        android:layout_width="38dp"
        android:layout_height="41dp"
        android:layout_alignStart="@+id/tvFecha1"
        android:layout_below="@+id/tvFecha1"
        android:src="@drawable/ic_lupa" />

    <ImageButton
        android:id="@+id/btnFecha2"
        android:layout_width="37dp"
        android:layout_height="42dp"
        android:layout_below="@+id/tvFecha1"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_lupa" />

    <ImageButton
        android:id="@+id/btnFecha3"
        android:layout_width="43dp"
        android:layout_height="41dp"
        android:layout_alignEnd="@+id/tvFecha3"
        android:layout_below="@+id/tvFecha1"
        android:src="@drawable/ic_lupa" />

    <TextView
        android:id="@+id/tvAviso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/aviso_sin_inflados"
        android:textColor="@color/colorPrimaryDark"
        android:visibility="invisible"
        android:background="@color/colorCeleste"/>

    <TextView
        android:id="@+id/tvKmInflado"
        android:layout_width="95dp"
        android:layout_height="32dp"
        android:layout_centerInParent="true"
        android:background="@drawable/ic_display"
        android:textColor="@color/colorPerlado"
        android:ems="10"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/tvKmstituloH"
        android:layout_width="76dp"
        android:layout_height="24dp"
        android:layout_below="@+id/tvKmInflado"
        android:layout_centerHorizontal="true"
        android:background="@drawable/ic_display"
        android:gravity="center"
        android:text="@string/text_kms"
        android:textColor="@color/colorPerlado" />

</RelativeLayout>